# Labs3sem

./: .gitignore  Lab1Card.qml  Lab1Screen.qml  Lab4Screen.qml  LabCardBttn.qml  Labs3sem.pro  Labs3sem.pro.user.84e7f35  MainButton.qml  MainScreen.qml  MainWindow.qml  Makefile  Makefile.Debug  Makefile.Release  Menu.qml  main.cpp  resources.qrc  src_resources_qmlcache.qrc  test.qml
build-testquick-6_6_0_mingw_shared-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-testquick-6_6_0_mingw_shared-Debug/.qt/: QtDeploySupport.cmake
build-testquick-6_6_0_mingw_shared-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_testquickApp.cmake  Qt6_QmlPlugins_Imports_testquickApp.rsp
build-testquick-6_6_0_mingw_shared-Debug/.qtc_clangd/: compile_commands.json
build-testquick-6_6_0_mingw_shared-Debug/.rcc/: configuration.qrc  qmake_Main.qrc  qrc_configuration.cpp  qrc_qmake_Main.cpp  qrc_testquickApp_raw_qml_0.cpp  testquickApp_raw_qml_0.qrc
build-testquick-6_6_0_mingw_shared-Debug/content/: Makefile  cmake_install.cmake
src/: .gitignore  CodePopup.qml  DynamicHashMapVis.qml  Lab1Card.qml  Lab1Screen.qml  Lab2Screen.qml  Lab3Screen.qml  Lab4Screen.qml  LabCard.qml  Labs3sem.pro.user.e92ab5e  MainButton.qml  MainDottedLine.qml  MainScreen.qml  MainWindow.qml  MyPopup.qml  PathFindingVis.qml  SortsVisualizer.qml  TicTacToe.qml  main.cpp  mysorter.h  resources.qrc  testclass.h
src/Lab1/: Lab1.h  MemorySpan.h  (+4 more)
testquick/: CMakeLists.txt  qmlmodules  testquick.qmlproject
tests/: Lab1Test.cpp
tests/Tests/: CMakeLists.txt  tst_memoryspantest.cpp  tst_sortstests.cpp
(+1579 files in other folders)
